--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
   </header>
 
   <main>
+    <!-- About: Icons  -->
     <section id="about" class="icons bg-light">
       <div class="flex-items">
         <div>
@@ -55,6 +56,26 @@
             <h3>Tax & Custodial</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, sit!</p>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- About: Solutions -->
+    <section class="solutions flex-columns">
+      <div class="column">
+        <div class="coulumn-1">
+          <img src="images/home/people.jpg" alt="">
+        </div>
+      </div>
+      <div class="column">
+        <div class="column-2">
+          <h4>What you are looking for</h4>
+          <h2>We provide bespoke solutions</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto laudantium illum repellat libero dolores? Adipisci qui excepturi distinctio dolore, voluptatum est porro quis at fuga dolorem, modi laudantium, a quia.</p>
+          <a href="#" class="btn btn-outline">
+            <i class="fas fa-chevron"></i>
+            Read More
+          </a>
         </div>
       </div>
     </section>
