--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <section class="solutions flex-columns">
       <div class="row">
         <div class="column">
-          <div class="coulumn-1">
+          <div class="column-1">
             <img src="images/home/people.jpg" alt="">
           </div>
         </div>
