--- a/index.html
+++ b/index.html
@@ -108,6 +108,28 @@
         </div>
       </div>
     </section>
+
+    <!-- Blog -->
+    <section id="blog" class="blog flex-columns flex-reverse">
+      <div class="row">
+        <div class="column">
+          <div class="column-1">
+            <img src="images/home/blog.jpg" alt="">
+          </div>
+        </div>
+        <div class="column">
+          <div class="column-2 bg-primary">
+            <h4>April 16 2020</h4>
+            <h2>Blog Post One</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto laudantium illum repellat libero dolores? Adipisci qui excepturi distinctio dolore, voluptatum est porro quis at fuga dolorem, modi laudantium, a quia.</p>
+            <a href="#" class="btn btn-outline">
+              <i class="fas fa-chevron"></i>
+              Read Our Blog
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 </body>
 </html>
