--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           </div>
         </div>
         <div class="column">
-          <div class="column-2 bg-primary">
+          <div class="column-2 bg-secondary">
             <h4>April 16 2020</h4>
             <h2>Blog Post One</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto laudantium illum repellat libero dolores? Adipisci qui excepturi distinctio dolore, voluptatum est porro quis at fuga dolorem, modi laudantium, a quia.</p>
