--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="content">
       <h1>The Sky Is The Limit</h1>
       <p>We provide world class financial assistance</p>
-      <a href="#about" class="btn"><i class="fas fa-chevron-right"></i>Read More</a>
+      <a href="#about" class="btn"><i class="fas fa-chevron-right"></i> Read More</a>
     </div>
   </header>
 
@@ -196,7 +196,7 @@
       <a href="#"><i class="fab fa-youtube fa-2x"></i></a>
       <a href="#"><i class="fab fa-linkedin fa-2x"></i></a>
     </div>
-    <p>Copyright &copy 2020 - EdgeLedger;</p>
+    <p>Copyright &copy 2020 - EdgeLedger</p>
   </footer>
 </body>
 </html>
