--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <h4>April 16 2020</h4>
             <h2>Blog Post One</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto laudantium illum repellat libero dolores? Adipisci qui excepturi distinctio dolore, voluptatum est porro quis at fuga dolorem, modi laudantium, a quia.</p>
-            <a href="#" class="btn btn-outline">
+            <a href="blog.html" class="btn btn-outline">
               <i class="fas fa-chevron"></i>
               Read Our Blog
             </a>
